# src/controllers/noteController.ts
@@ -1,126 +1,124 @@
 import { Response, Request, NextFunction } from 'express';
-import { Note } from '../types/Note';
-import toNewNote from '../typeGuards/toNewNote';
-import notesServices from '../service/noteServices';
-import toNewNoteUpdate from '../typeGuards/toNewNoteUpdate';
-import { ErrorTypes } from '../types/ErrorResponse';
-import { paths } from '../types/schema';
+import { Note, ResponseData } from '../types/main';
+import boom from '@hapi/boom';
+import * as parseRequest from '../validate/note.validate';
+import * as services from '../service/note.services';
 
-const getNotes = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
+export const addNote = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
   try {
-    const rawNotes: Note[] = await notesServices.getUserNotes(userId);
-    res.status(200).json(rawNotes);
+    const { body } = await parseRequest.createNote(req);
+    const newNote = await services.addNote(body);
+
+    const response: ResponseData<'/notes', 'post', 201> = {
+      statusCode: 201,
+      jsonContent: newNote,
+    };
+    res.status(response.statusCode).json(response.jsonContent);
   } catch (error) {
     next(error);
   }
 };
 
-const getNoteById = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
+export const removeNote = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
   try {
-    const { id } = req.params;
-    const note = await notesServices.getNoteById(id, userId);
-    if (!note) {
-      res.status(404).json({ error: ErrorTypes.NOT_FOUND });
-      return;
-    }
-
-    res.status(200).json(note);
-  } catch (error) {
-    next(error);
-  }
-};
-
-const addNote = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
-  try {
-    const noteContent = toNewNote({ ...req.body, userId });
-    const newNote = await notesServices.addNote(noteContent);
-
-    res.status(201).json(newNote);
-  } catch (error) {
-    next(error);
-  }
-};
-
-const removeNote = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
-  try {
-    const { id } = req.params;
-    const deletedNote = await notesServices.removeNote(id, userId);
-
+    const { params } = await parseRequest.deleteNote({ params: { id: req.params.id } });
+    const deletedNote = await services.removeNote({ noteId: params.id });
     if (!deletedNote) {
-      res.status(404).json({ error: 'notFound' });
-      return;
+      throw boom.notFound('Note not found!');
     }
 
-    res.status(204).send();
+    const response: ResponseData<'/notes', 'delete', 204> = {
+      jsonContent: undefined as never,
+      statusCode: 204,
+    };
+    res.status(response.statusCode).send();
   } catch (error) {
     next(error);
   }
 };
 
-const updateNote = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
+export const getNotes = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const { id } = req.params;
-    const update = toNewNoteUpdate(req.body);
+    const rawNotes: Note[] = await services.getNotes();
 
-    const updatedNote = await notesServices.updateNote(id, userId, update);
+    const response: ResponseData<'/notes', 'get', 200> = {
+      jsonContent: rawNotes,
+      statusCode: 200,
+    };
+    res.status(response.statusCode).json(rawNotes);
+  } catch (error) {
+    next(error);
+  }
+};
+
+export const getNoteById = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+  try {
+    const { params } = await parseRequest.getNoteById({ params: { id: req.params.id } });
+    const note = await services.getNoteById(params.id);
+    if (!note) {
+      throw boom.notFound('Note Not Found!');
+    }
+    const response: ResponseData<'/notes/{id}', 'get', 200> = {
+      jsonContent: note,
+      statusCode: 200,
+    };
+    res.status(response.statusCode).json(response.jsonContent);
+  } catch (error) {
+    next(error);
+  }
+};
+
+export const updateNote = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+  try {
+    const { params, body } = await parseRequest.updateNote({ params: { id: req.params.id }, body: req.body });
+
+    const updatedNote = await services.updateNote({ noteId: params.id, updateData: body });
 
     if (!updatedNote) {
-      res.status(404).json({ error: 'notFound' });
-      return;
+      throw boom.notFound('Note not found!');
     }
 
-    res.json(updatedNote);
+    const response: ResponseData<'/notes/{id}', 'put', 200> = {
+      jsonContent: updatedNote,
+      statusCode: 200,
+    };
+    res.status(response.statusCode).json(response.jsonContent);
   } catch (error) {
     next(error);
   }
 };
 
-const complete = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
+export const complete = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
   try {
-    const { id } = req.params;
-    const updatedNote = await notesServices.complete(id, userId);
+    const { params } = await parseRequest.completeNote({ params: { id: req.params.id } });
+    const updatedNote = await services.complete(params.id);
 
     if (!updatedNote) {
-      res.status(404).json({ error: 'notFound' });
-      return;
+      throw boom.notFound('Not not found!');
     }
-
-    res.json(updatedNote);
+    const response: ResponseData<'/notes/{id}/complete', 'post', 200> = {
+      statusCode: 200,
+      jsonContent: { completed: 'Done' },
+    };
+    res.status(response.statusCode).json(response.jsonContent);
   } catch (error) {
     next(error);
   }
 };
-const unComplete = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  const userId = String(req.user.id);
+export const unComplete = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
   try {
-    const { id } = req.params;
-    const updatedNote = await notesServices.unComplete(id, userId);
+    const { params } = await parseRequest.unCompleteNote({ params: { id: req.params.id } });
+    const updatedNote = await services.complete(params.id);
 
     if (!updatedNote) {
-      res.status(404).json({ error: 'notFound' });
-      return;
+      throw boom.notFound('Not not found!');
     }
-
-    res.json(updatedNote);
+    const response: ResponseData<'/notes/{id}/unComplete', 'post', 200> = {
+      statusCode: 200,
+      jsonContent: { cancel_complete: 'Done' },
+    };
+    res.status(response.statusCode).json(response.jsonContent);
   } catch (error) {
     next(error);
   }
 };
-
-const payload = {
-  getNotes,
-  getNoteById,
-  addNote,
-  removeNote,
-  updateNote,
-  complete,
-  unComplete,
-};
-
-export default payload;
