# src/models/Note.ts
@@ -1,47 +1,32 @@
-import { model, Schema } from 'mongoose';
-import { NewNoteDocument } from '../types/Note';
+import { model, Model, Schema } from 'mongoose';
+import toJSON from '../lib/toJSON';
+import { NoteDocument } from '../types/main';
 
-const noteSchema = new Schema<NewNoteDocument>(
+interface NoteModel extends Model<NoteDocument> {}
+const noteSchema = new Schema<NoteDocument, NoteModel>(
   {
-    title: {
+    content: {
       type: String,
       required: true,
     },
-    description: {
-      type: String,
-    },
-    complete: {
+    completed: {
       type: Boolean,
       default: false,
     },
     userId: {
-      type: Schema.Types.ObjectId,
-      require: true,
+      type: String,
+      required: true,
     },
   },
   {
     timestamps: true, // Add createdAt and updatedAt timestamps
     versionKey: false, // Disable versioning (__v field)
     minimize: false, // Save empty objects and arrays by default
-  }
+  },
 );
 noteSchema.set('validateBeforeSave', false);
+noteSchema.plugin(toJSON);
 
-noteSchema.virtual('id').get(function () {
-  // eslint-disable-next-line @typescript-eslint/no-unsafe-return, @typescript-eslint/no-unsafe-call
-  return this._id.toHexString();
-});
-
-// remove unwanted _id and password
-noteSchema.set('toJSON', {
-  virtuals: true,
-  versionKey: false,
-  transform: (_doc, ret) => {
-    delete ret._id;
-    delete ret.password;
-  },
-});
-
-const NoteModel = model<NewNoteDocument>('Note', noteSchema);
+const NoteModel = model<NoteDocument, NoteModel>('Note', noteSchema);
 
 export default NoteModel;
